# wavefolder

./: Cargo.toml  README.md  package.json
.github/actions/bootstrap/: action.yml
.github/workflows/: release.yml
rust/wave_folder/component/: Cargo.toml
rust/wave_folder/component/src/: lib.rs
rust/wave_folder/vst/: Cargo.toml  about.hbs
rust/wave_folder/vst/src/: lib.rs
web/wave_folder/: bundle.json  package.json
web/wave_folder/src/: Layout.tsx  mock_infos.ts
