[workspace]
members = [ "rust/wave_folder/component", "rust/wave_folder/vst" ]
resolver = "2"

[workspace.package]
rust-version = "1.93.1"
edition = "2024"

[workspace.lints.rust]
nonstandard_style = "warn"
rust_2018_idioms = "warn"
future_incompatible = "warn"

[workspace.lints.rustdoc]
private_doc_tests = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
todo = "warn"
type_complexity = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
default_trait_access = "allow"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[profile.release]
lto = "thin"
